<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivprofilePhoto"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivprofilePhoto" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDisplayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblName"
        app:layout_constraintTop_toBottomOf="@id/ivprofilePhoto" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/user_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDisplayName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/user_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblName"
        app:layout_constraintTop_toBottomOf="@id/tvDisplayName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/user_Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblGender" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/user_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblName"
        app:layout_constraintTop_toBottomOf="@id/lblGender" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/user_Address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/user_Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblName"
        app:layout_constraintTop_toBottomOf="@id/lblEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/user_Age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddress" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/user_Age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblName"
        app:layout_constraintTop_toBottomOf="@id/tvAddress" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/user_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblAge" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/user_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblPhone"
        app:layout_constraintTop_toBottomOf="@id/lblAge" />

</androidx.constraintlayout.widget.ConstraintLayout>